  * fcgi-client: provide SCRIPT_FILENAME
  * fcgi-client: append empty PARAMS packet
  * fcgi-client: try to read response before request is finished
  * fcgi-client: implement the STDERR packet
  * fcgi-client: support request headers and body
  * fcgi-stock: manage one socket per child process
  * fcgi-stock: unlink socket path after connect
  * fcgi-stock: redirect fd 1,2 to /dev/null

 --

cm4all-beng-proxy (0.7.12) unstable; urgency=low

  * http-cache: unlock the cache item after successful revalidation
  * http-cache-memcached: pass the expiration time to memcached
  * sink-header: comprise pending data in method available()
  * header-forward: forward the Expires response header

 -- Max Kellermann <mk@cm4all.com>  Tue, 22 Dec 2009 16:18:49 +0100

cm4all-beng-proxy (0.7.11) unstable; urgency=low

  * {ajp,memcached}-client: fix dis\appearing event for duplex socket
  * memcached-client: handle EAGAIN after send()
  * memcached-client: release socket as early as possible
  * header-forward: don't forward Accept-Encoding if transformation is
    enabled
  * widget-http, inline-widget: check Content-Encoding before processing
  * file-handler: send "Vary: Accept-Encoding" for compressed response
  * header-forward: support duplicate headers
  * fcache: implemented a 60 seconds timeout
  * fcache: copy pointer to local variable before callback
  * event2: refresh timeout after event has occurred

 -- Max Kellermann <mk@cm4all.com>  Fri, 18 Dec 2009 16:45:24 +0100

cm4all-beng-proxy (0.7.10) unstable; urgency=low

  * http-{server,client}: fix disappearing event for duplex socket

 -- Max Kellermann <mk@cm4all.com>  Mon, 14 Dec 2009 15:46:25 +0100

cm4all-beng-proxy (0.7.9) unstable; urgency=low

  * http: "Expect" is a hop-by-hop header
  * http-server: send "100 Continue" unless request body closed
  * http-client: poll socket after splice
  * http-server: handle EAGAIN after splice
  * http-server: send a 417 response on unrecognized "Expect" request