@@ -629,6 +629,11 @@ preceding \texttt{PIPE} \\
 
 \hline
 
+\texttt{PAIR} & adds a FastCGI parameter in the form
+\texttt{KEY=VALUE} \\
+
+\hline
+
 \texttt{REDIRECT} & another alternative to \texttt{PATH}: redirect the
 HTTP client to this URL; \texttt{STATUS} must be set to one of the
 HTTP 3xx codes \\
