@@ -60,6 +60,7 @@ enum beng_translation_command {
     TRANSLATE_RESPONSE_HEADER_FORWARD = 49,
     TRANSLATE_DEFLATED = 50,
     TRANSLATE_GZIPPED = 51,
+    TRANSLATE_PAIR = 52,
 };
 
 struct beng_translation_header {
