@@ -18,6 +18,13 @@ struct strmap;
 void
 fcgi_serialize_params(struct growing_buffer *gb, uint16_t request_id, ...);
 
+/**
+ * @param request_id the FastCGI request id in network byte order
+ */
+void
+fcgi_serialize_vparams(struct growing_buffer *gb, uint16_t request_id,
+                       const char *const params[], unsigned num_params);
+
 void
 fcgi_serialize_headers(struct growing_buffer *gb, uint16_t request_id,
                        struct strmap *headers);
